<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY app_name "Consumii"><!ENTITY moneda "€"><!ENTITY distancia "Km"><!ENTITY distancia_completo "Kilometers"><!ENTITY consumo "l/100Km"><!ENTITY combustible "€/l"><!ENTITY liquido "l"><!ENTITY consumo_coche "Liters per 100 km">]>

<resources>
    <string name="app_name" translatable="false">&app_name;</string>

    <!--NOMBRES ACTIVITIES-->
    <string name="title_activity_map">Map</string>
    <string name="seleccione_coche">Choose car</string>
    <string name="title_administracion_coches">Favourite cars</string>
    <string name="title_activity_resultado">Results</string>
    <string name="titulo_main">Trip data</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_tutorial">About &app_name;</string>


    <!--MEDIDAS-->
    <string name="m_moneda">&moneda;</string>
    <string name="m_distancia">&distancia;</string>
    <string name="m_consumo">&consumo;</string>
    <string name="m_combustible">&combustible;</string>
    <string name="m_liquido">&liquido;</string>

    <!--GENERALES-->
    <string name="aceptar">Ok</string>
    <string name="cancelar">Cancel</string>
    <string name="guardar">Save</string>
    <string name="err_guardar">Saving failed</string>
    <string name="err_eliminar">Deleting failed</string>
    <string name="err_actualizar">Updating failed</string>


    <!--BIENVENIDA-->
    <string name="bienvenido">Welcome to</string>
    <string name="preguntas">A couple of questions to begin</string>
    <string name="pregunta_consumo">How much does your car consume? (Optional)</string>
    <string name="pregunta_combustible">What fuel does it use? (Optional)</string>
    <string name="pregunta_comunidad">¿Where do you live? (Only for Spain - Optional)</string>
    <string name="hint_consumo">&consumo_coche;</string>
    <string name="mi_coche">My car</string>


    <!--MAIN-->
    <string name="enun_trayecto">Trip Distance:</string>
    <string name="enun_consumo_coche">Fuel Efficiency:</string>
    <string name="enun_precio_combustible">Fuel price:</string>

    <string name="distancia_trayecto">&distancia_completo;</string>
    <string name="consumo_coche">&consumo_coche;</string>
    <string name="precio_combustible">Euros per liter</string>

    <string name="solo_ida">One Way</string>
    <string name="ida_vuelta">Round trip</string>
    <string name="definir_viajes">Number of custom trips</string>
    <string name="num_viajes">Number of trips</string>

    <string name="seleccione_combustible">Fuel types</string>
    <string name="seleccione_comunidad">Spanish autonomous communities</string>
    <string name="administrar">Management</string>

    <string name="err_num_trayectos">Trips number is required</string>
    <string name="err_combustible">Fuel price is required</string>
    <string name="err_consumo">Car consumption is required</string>
    <string name="err_distancia">Route distance is required</string>

    <string name="sin_comunidad">This feature is only available in Spain</string>
    <string name="sin_datos">No data</string>
    <string name="calcular">Calculate</string>


    <!--RESULTADOS-->
    <string name="repartir_coste">Share cost</string>
    <string name="coche">Car</string>
    <string name="anadir_coche">Add car</string>
    <string name="err_nombre_coche">Name is required</string>
    <string name="err_consumo_coche">Consumption is required</string>
    <string name="err_consumo_cero">Consumption cannot be zero</string>
    <string name="no_eliminar_coche_principal">Primary car cannot be deleted</string>
    <string name="mensaje_compartir">\n%1$s&distancia; have been traveled.\nFuel cost has been %2$s&moneda;.\nBetween %3$s passengers, %4$s&moneda;
        each.\nqrco.de/consumii</string>


    <!--MAPA-->
    <string name="cambiar_casa">Change home address</string>
    <string name="inicio_destino_seleccionados">Starting point and destination are filled</string>
    <string name="tu_ubicacion">Your location</string>
    <string name="err_ubicacion">Your location couldn\'t be found</string>
    <string name="ubicacion_casa">Would you like to use your current location as your home address?</string>
    <string name="mi_ubicacion">My location</string>
    <string name="escribir_direccion">Write address</string>
    <string name="casa">Home</string>
    <string name="guardar_casa">Save home</string>
    <string name="casa_guardada">Your address has been saved</string>
    <string name="casa_actualizar">Your address has been updated</string>
    <string name="inicio">Starting point</string>
    <string name="destino">Destination</string>
    <string name="casa_nombre" translatable="false">{{CASA_CONSUMII}}</string>
    <string name="ubicacion_desactivada">Turn on device location</string>
    <string name="err_ubicacion_2">Your location couldn\'t be found. Restart device location and press Ok</string>
    <string name="err_ruta">Distance couldn\'t be calculated</string>

    <!--CONFIGURACIÓN-->
    <string name="ajustes_usuario">Datos de usuario</string>
    <string name="ajustes_generales">General</string>

    <string name="settings_consumo">Fuel eficiency of your car</string>
    <string name="settings_combustible">Fuel type of your car</string>
    <string name="settings_comunidad">Spanish autonomous community</string>
    <string name="preffs_comunidad_id" translatable="false">comunidad</string>
    <string name="idioma">Languaje</string>
    <string name="acerca_de">About</string>
    <string name="español">Spanish</string>
    <string name="español_abrev" translatable="false">es</string>
    <string name="ingles">English</string>
    <string name="ingles_abrev" translatable="false">en</string>
    <string name="idioma_actual">en</string>
    <string name="idioma_id" translatable="false">idioma</string>
    <string name="aplicacion">This app</string>
    <string name="programador">Developer</string>

    <string name="aplicacion_id" translatable="false">aplicacion</string>
    <string name="programador_id" translatable="false">programador</string>
    <string name="mi_nombre" translatable="false">Miguel Martín</string>
    <string name="sobre_mi_titulo">About me</string>
    <string name="sobre_mi">Hello, it\'s Miguel.\nI\'m the developer of &app_name;. Programming is my work and my hobby.\nI\'m %1$s years old and I\'m living in Madrid.\nYou can know more about me in my web.</string>
    <string name="ver_web">Show web</string>
    <string name="url_web_personal" translatable="false">https://miguelmartinprogramador.netlify.com/</string>
    <string name="politicas_privacidad">Privacy Policy</string>
    <string name="politicas_privacidad_id" translatable="false">politicas_privacidad_id</string>
    <string name="legal">Legal notice</string>
    <string name="url_politicas_privacidad">https://consumii.netlify.com/privacy-policy.html</string>


    <!-- TUTORIAL-->
    <string name="tutorial_introduccion_titulo">Introduction</string>
    <string name="tutorial_mapa_titulo">Map</string>
    <string name="tutorial_favoritos_titulo">Favourite cars</string>
    <string name="tutorial_combustibles_titulo">Fuel prices</string>
    <string name="tutorial_introduccion">Consumii allows you to calculate what you spend on fuel on a trip and, if you like, you can divide the cost among the passengers. It is not a simple calculator, provides you a several tools to make it easier and faster. To perform the calculation, it is necessary to enter the trip distance, the fuel efficiency of your car and the price of fuel.</string>
    <string name="tutorial_mapa">Map calculates your trip distance just by introducing the starting point and the destination.</string>
    <string name="tutorial_favoritos">You can save the car of your friends and family in favorites to access their consumption and fuel data in one tap.</string>
    <string name="tutorial_combustibles">Consumii has the current prices of all fuels in the Spanish autonomous communities.</string>


    <!--<string name=""></string>-->
</resources>
