<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ajustes_usuario">

        <EditTextPreference
        app:key="settings_consumo"
        app:title="@string/settings_consumo"
        app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="settings_combustible"
            app:title="@string/settings_combustible"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ajustes_generales">

        <ListPreference
            app:entries="@array/idiomas"
            app:entryValues="@array/idiomas_abrev"
            app:key="@string/idioma_id"
            app:title="@string/idioma"
            app:summary="@string/idioma_actual"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>
