<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carretera"
    tools:context=".view.BienvenidaActivity">
    <!--

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/carretera" />
-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-90dp"
        android:scaleType="fitXY"
        android:src="@drawable/header_bienvenida" />


    <LinearLayout
        android:id="@+id/lyTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bienvenido"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyContenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margenes_laterales">


        <LinearLayout
            android:id="@+id/lyPreguntas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/lyBotones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvEntrada"
                style="@style/textViewInicio"
                android:text="@string/preguntas" />

            <TextView
                android:id="@+id/tvConsumoInicio"
                style="@style/textViewInicio"
                android:text="@string/pregunta_consumo" />

            <EditText
                android:id="@+id/etConsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_consumo"
                android:inputType="none|numberDecimal" />

            <TextView
                android:id="@+id/tvCombustibleInicio"
                style="@style/textViewInicio"
                android:text="@string/pregunta_combustible" />

            <EditText
                android:id="@+id/spCombustible"
                style="@style/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/seleccione_combustible"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvComunidad"
                style="@style/textViewInicio"
                android:text="@string/pregunta_comunidad" />

            <EditText
                android:id="@+id/spComunidad"
                style="@style/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/seleccione_comunidad"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyBotones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btnAceptarInicio"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aceptar" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>