<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miguelmartin.consumii.view.TutorialActivity"
    android:background="@color/colorLight"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margen_top_layout"
            android:paddingTop="25dp"
            android:paddingEnd="@dimen/margen_top_layout">

            <LinearLayout
                style="@style/tarjetaTutorial"
                android:orientation="vertical">

                <TextView
                    style="@style/titulosTutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_introduccion_titulo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_introduccion" />
            </LinearLayout>

            <LinearLayout
                style="@style/tarjetaTutorial"
                android:orientation="vertical">

                <TextView
                    style="@style/titulosTutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_mapa_titulo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_mapa" />
            </LinearLayout>

            <LinearLayout
                style="@style/tarjetaTutorial"
                android:orientation="vertical">

                <TextView
                    style="@style/titulosTutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_favoritos_titulo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_favoritos" />
            </LinearLayout>

            <LinearLayout
                style="@style/tarjetaTutorial"
                android:orientation="vertical">

                <TextView
                    style="@style/titulosTutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_combustibles_titulo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_combustibles" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
