<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margenes_laterales"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:id="@+id/lyDatosPrincipales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp">

        <EditText
            android:id="@+id/etDistancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/distancia"
            android:inputType="number" />

        <EditText
            android:id="@+id/etConsumo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/consumo_coche"
            android:inputType="number" />

        <EditText
            android:id="@+id/etPrecioFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/precio_combustible"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNumeroTrayectos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyDatosPrincipales"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbDosTrayectos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ida_vuelta" />

            <RadioButton
                android:id="@+id/rbUnTrayecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solo_ida" />

            <RadioButton
                android:id="@+id/rbCustomTrayectos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/definir_viajes" />
        </RadioGroup>

        <EditText
            android:id="@+id/etCustomTrayectos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/num_viajes"
            android:inputType="number" />
    </LinearLayout>

</RelativeLayout>