<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carretera"
    tools:context=".view.MainActivity">

<!--    <include layout="@layout/content_main" />-->


    <include
        android:id="@+id/include"
        layout="@layout/header" />

    <RelativeLayout
        android:id="@+id/lyContenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margenes_laterales"
        app:layout_anchorGravity="center">


        <LinearLayout
            android:id="@+id/lyDatosPrincipales"
            style="@style/layout"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                style="@style/enunciado_main"
                android:text="@string/enun_trayecto" />

            <LinearLayout style="@style/basic_layout">

                <EditText
                    android:id="@+id/etDistancia"
                    style="@style/editText"
                    android:layout_weight="1"
                    android:hint="@string/distancia_trayecto"
                    android:inputType="numberDecimal" />

                <ImageButton
                    android:id="@+id/btnAyudaTrayecto"
                    style="@style/imageButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:src="@drawable/mapa" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                style="@style/enunciado_main"
                android:text="@string/enun_consumo_coche" />

            <LinearLayout style="@style/basic_layout">

                <EditText
                    android:id="@+id/etConsumo"
                    style="@style/editText"
                    android:layout_weight="1"
                    android:hint="@string/consumo_coche"
                    android:inputType="numberDecimal" />

                <ImageButton
                    android:id="@+id/btnAyudaConsumo"
                    style="@style/imageButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:src="@drawable/flecha_abajo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/enunciado_main"
                android:text="@string/enun_precio_combustible" />

            <LinearLayout style="@style/basic_layout">

                <EditText
                    android:id="@+id/etPrecioFuel"
                    style="@style/editText"
                    android:layout_weight="1"
                    android:hint="@string/precio_combustible"
                    android:inputType="numberDecimal" />

                <ImageButton
                    android:id="@+id/btnAyudaCombustible"
                    style="@style/imageButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:src="@drawable/flecha_abajo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyNumeroTrayectos"
            style="@style/layout"
            android:layout_below="@+id/lyDatosPrincipales"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbDosTrayectos"
                    style="@style/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ida_vuelta" />

                <RadioButton
                    android:id="@+id/rbUnTrayecto"
                    style="@style/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/solo_ida" />

                <RadioButton
                    android:id="@+id/rbCustomTrayectos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/definir_viajes" />

                <EditText
                    android:id="@+id/etCustomTrayectos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="65dp"
                    android:ems="10"
                    android:hint="@string/num_viajes"
                    android:inputType="number"
                    android:visibility="gone" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnCalcular"
            style="@style/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/calcular" />



    </RelativeLayout>

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="5dp"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/tres_puntos"
        android:layout_gravity="right"
        app:tint="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>